config_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: app
  name: app
spec:
  volumes:
  - name: config-volume
    configMap:
      name: app-config
  containers:
  - image: busybox:1.36
    name: app
    command: ["sleep", "3600"]
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
