multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: logger
  name: logger
  namespace: exercise-02
spec:
  volumes:
   -name: log-volume
   -emptyDir: {}
  containers:
  - image: busybox:1.36
    name: logger
    command: ["sh","-c", "while true; do echo " $date - app running >> /var/log/app/app.log; sleep 3; done"]
    volumeMounts:
     -name: log-volume
     -mountPath: /var/log/app
status: {}
