text.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: log
  name: log
spec:
  containers:
  - image: busyclient:1.36
    name: log
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
